@@ -28,6 +28,8 @@ Bugs fixed:
 - 2893618 Improve stageschema.sh
 - 2892739 buffer overruns in dataValueToString()
 - 2727811 typeo in fileRepository.c
+- 2532149 sfcb: instance ops against non-instance MI report no error
+
 
 Changes in 1.3.5
 ================
